# c-stuff

./: .gitignore  CMakeLists.txt  README.md  aoc_tools.c  aoc_tools.h  main.c  read_text.c  tools.c  tools.h
